example/stmt_test/stmt_test5.nbl
// no initializers
var a;
var b;

a = "assigned";

print(a); // works
print(b); // error
